# rtls_create_autonomy

./: .gitattributes  .gitignore  .travis.yml  README.md  dependencies.repos  dependencies.txt  remote.repos  rpi.repos
ca_bringup/: CMakeLists.txt  README.md  package.xml
ca_bringup/launch/: complete.launch  create_2.launch  minimal.launch  minimal_ros_control.launch  remote_complete.launch  remote_minimal.launch
ca_bringup/scripts/: remote_access_config.sh  robot_network_config.sh
ca_bringup/scripts/udev/: create_rules.sh
ca_gazebo/: CMakeLists.txt  package.xml
ca_gazebo/include/ca_gazebo/: cliff_msg_publisher.h  create_bumper_plugin.h  create_diff_drive.h  traffic_light_plugin.h  virtual_wall_detector.h  world_time_publisher.h
ca_gazebo/launch/: create_2_sim.launch  create_autorace.launch  create_cooperative_two_rooms.launch  create_corridor.launch  create_elevated.launch  create_empty_world.launch  create_house.launch  create_maze.launch  create_playground.launch  create_playpen.launch  create_restaurant.launch  create_servicesim.launch  create_stage_1.launch  create_stage_2.launch  create_sweet_house_3.launch  create_sweet_house_5.launch  create_tea_shop.launch  create_two_floors_house.launch  create_warehouse.launch  demo.launch  spawn_create.launch  spawn_multirobot.launch
ca_gazebo/models/create_autorace/: model.config
ca_gazebo/models/create_hector_nist_arenas/: model.config
ca_gazebo/models/create_house/: model.config  model.sdf
ca_gazebo/models/create_plaza/: model.config  model.sdf
ca_gazebo/models/create_servicesim/: model.config
ca_gazebo/models/create_square/: model.config  model.sdf
ca_gazebo/models/restaurant/: model.config  restaurant.mtl
ca_gazebo/models/sweet_home_3d/: LICENSE  README.md  model.config
ca_gazebo/models/tea_shop/: model.config  teahouse.mtl
ca_gazebo/models/two_floors_house/: model.config  model.sdf
ca_gazebo/models/virtual_wall/: model.config  model.sdf
ca_gazebo/models/warehouse/: DHP_B27_test_v12.mtl  model.config  model.sdf
ca_gazebo/src/: cliff_msg_publisher.cpp  create_bumper_plugin.cpp  create_cliff_plugin.cpp  create_diff_drive.cpp  create_virtual_wall_plugin.cpp  model_pose_publisher_plugin.cpp  virtual_wall_detector.cpp
ca_gazebo/src/servicesim/: FollowActorPlugin.cc  FollowActorPlugin.hh  VicinityPlugin.cc  VicinityPlugin.hh
ca_gazebo/test/: hz.test  publish.test  static.test
ca_gazebo/test/params/: hz.yaml
ca_gazebo/test/scripts/: publish.py  static.py  tf_checker.py
ca_gazebo/worlds/: autorace.world  empty.world  playpen.world  stage_1.world  stage_2.world  sweet_house_3.world  two_rooms.world
ca_msgs/: CMakeLists.txt  package.xml
ca_navigation/ca_localization/: CMakeLists.txt  package.xml
ca_navigation/ca_localization/config/: ekf_localization.yaml
ca_navigation/ca_localization/launch/: localize.launch  start.launch
ca_navigation/ca_visual_odometry/: CMakeLists.txt  README.md  package.xml
ca_navigation/ca_visual_odometry/config/: ost.yaml
ca_navigation/ca_visual_odometry/launch/: calibrate.launch  cam_mapping.launch  raspicam_stream.launch  stream_test.launch  vo_raspicam.launch
ca_navigation/ca_visual_odometry/scripts/: image_rect  stream_raspicam
ca_node/: CMakeLists.txt  package.xml
ca_node/launch/: create_2.launch  move_seq.launch  smach_controller.launch
ca_node/scripts/: move_seq.py  ranking_controller.py  smach_ranking_controller.py
ca_tools/: CMakeLists.txt  package.xml
ca_tools/launch/: joy_teleop.launch  keyboard_teleop.launch  move_command.launch  move_square.launch  rviz.launch
ca_tools/rviz/: cartographer.rviz  config.rviz  depthimage_to_laserscan.rviz  localization.rviz  multi_robot.rviz  navigation.rviz  octomap.rviz  robot_description.rviz  swarm.rviz  tf.rviz  visual_odom.rviz
ca_tools/scripts/: key_teleop.py  move_square.py
docker/: Makefile  (+5 more)
navigation/ca_control/: CMakeLists.txt  package.xml
navigation/ca_control/launch/: control_common.launch  control_hw.launch
navigation/ca_localization/: CMakeLists.txt  package.xml
navigation/ca_localization/config/: ekf_imu.yaml  ekf_localization.yaml
navigation/ca_localization/launch/: localize.launch
navigation/ca_localization/rviz/: localization.rviz
navigation/ca_move_base/: CMakeLists.txt  package.xml
navigation/ca_move_base/config/: amcl_params.yaml  carrot_global_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  gbp_global_planner_params.yaml  global_costmap_params.yaml  lama_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml  sbpl_global_planner_params.yaml  teb_local_planner_params.yaml  trajectory_rollout_local_planner_params.yaml
navigation/ca_move_base/launch/: amcl.launch  amcl_hector.launch  amcl_initial_pose.launch  lama.launch  map_server.launch  move_base.launch  move_base_flex.launch  navigate.launch  octomap_mapping.launch  send_goal.launch
navigation/ca_move_base/maps/: empty.yaml  house.yaml  ireland_office_v1.pgm  ireland_office_v1.yaml  ireland_office_v2.yaml  ireland_office_v3.yaml  my_house.pgm  my_house.yaml
navigation/ca_move_base/rviz/: navigation.rviz
navigation/ca_move_base/src/: send_robot_goal.cpp
navigation/ca_slam/: CMakeLists.txt  package.xml
navigation/ca_slam/config/: depthimage_to_laserscan.yaml  slam_gmapping.yaml
navigation/ca_slam/launch/: depthimage_to_laserscan.launch  depthimage_to_laserscan_gazebo.launch  slam_gmapping.launch
navigation/ca_swarm/: CMakeLists.txt  package.xml
navigation/ca_swarm/config/: dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
navigation/ca_swarm/launch/: move_base.launch  navigate.launch
navigation/ca_swarm/scripts/: box_client.py
navigation/ca_visual_odometry/: CMakeLists.txt  package.xml
navigation/ca_visual_odometry/config/: gscam.yaml  viso2.yaml
navigation/create_control/: CMakeLists.txt  package.xml
sensors/ca_camera/: CMakeLists.txt  package.xml
sensors/ca_imu/: CMakeLists.txt  README.md  package.xml
sensors/ca_mpu6050/: CMakeLists.txt  README.md  package.xml  setup.py
(+138 files in other folders)
