<?xml version="1.0"?>
<package format="2">
  <name>ca_bringup</name>
  <version>0.0.0</version>
  <description>The ca_bringup package</description>

  <maintainer email="emiliano.borghi@gmail.com">Emiliano Borghi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>ca_node</run_depend>

  <export>
  </export>
</package>
