<?xml version="1.0"?>
<package>
  <name>ca_gazebo</name>
  <version>0.0.1</version>
  <description>The ca_gazebo package</description>

  <maintainer email="emiliano.borghi@gmail.com">Emiliano Borghi</maintainer>

  <license>BSD</license>

  <build_depend>ca_msgs</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <run_depend>ca_description</run_depend>
  <run_depend>ca_msgs</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models:${prefix}/models/create_autorace:${prefix}/models/create_house"/>
    <gazebo_ros plugin_path="${prefix}/lib:${prefix}/models/create_autorace/gazebo_traffic_plugin"/>
  </export>
</package>
