<?xml version="1.0"?>
<package>
  <name>ca_node</name>
  <version>1.1.0</version>
  <description>ROS driver for iRobot Create 2, based on libcreate</description>

  <maintainer email="jperron@sfu.ca">Jacob Perron</maintainer>

  <license>BSD</license>
  
  <author email="jperron@sfu.ca">Jacob Perron</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ca_driver</build_depend>
  <build_depend>ecl_threads</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>ca_description</run_depend>
  <run_depend>ca_driver</run_depend>
  <run_depend>ca_msgs</run_depend>
  <run_depend>ecl_threads</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>
  <run_depend>smach_viewer</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/plugins/nodelet_plugins.xml" />
  </export>
</package>
