<?xml version="1.0"?>
<package format="2">
  <name>ca_control</name>
  <version>0.0.0</version>
  <description>Create control pkg, intended for using with Create2</description>

  <maintainer email="serraramiro@ekumenlabs.com">Ramiro Serra</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <depend>joint_state_controller</depend>
  <depend>libcreate</depend>
  <depend>robot_state_publisher</depend>
  <depend>topic_tools</depend>

  <test_depend>roslint</test_depend>

</package>
