<?xml version="1.0"?>
<package format="2">
  <name>ca_localization</name>
  <version>0.0.0</version>
  <description>The ca_localization package</description>

  <maintainer email="emiliano.borghi@gmail.com">Emiliano Borghi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_localization</build_depend>
  <build_export_depend>robot_localization</build_export_depend>
  <exec_depend>robot_localization</exec_depend>

  <export></export>
</package>
