<?xml version="1.0"?>
<package format="2">
  <name>ca_move_base</name>
  <version>0.0.0</version>
  <description>Has navigations utilities</description>

  <maintainer email="emiliano.borghi@gmail.com">Emiliano Borghi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>amcl</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>octomap_server</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>amcl</build_export_depend>
  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>carrot_planner</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>octomap_server</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>tf</exec_depend>

</package>
