<?xml version="1.0"?>
<package format="2">
  <name>ca_visual_odometry</name>
  <version>0.0.0</version>
  <description>The ca_visual_odometry package</description>

  <maintainer email="emiliano.borghi@gmail.com">Emiliano Borghi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>camera_calibration</exec_depend>
  <exec_depend>gscam</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>rqt_pose_view</exec_depend>

  <export>
  </export>
</package>
