<?xml version="1.0"?>
<package format="2">
  <name>ca_camera</name>
  <version>0.0.0</version>
  <description>Drivers for several 3D and 2D cameras.</description>

  <maintainer email="emiliano.borghi@gmail.com">Emiliano Borghi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>astra_camera</depend>
  <depend>camera_calibration</depend>
  <depend>openni2_launch</depend>
  <depend>rplidar_ros</depend>

</package>
